--- a/index.html
+++ b/index.html
@@ -7,57 +7,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{
+        * {
             padding: 0px;
             margin: 0px;
         }
-        ul {
+
+        h3,ul,p ,div{
             width: 85%;
             margin: 10px auto;
+        }
+        p{ 
+            margin: 5px auto;
+            font-size: 12px;
+            line-height: 12px;
+        }
+        ul {
             /* display: flex; */
             flex-wrap: wrap;
             list-style: none;
+            border-top: 1px solid #000;
+            /* border-bottom: 1px solid #000; */
         }
+
         ul li {
-            margin: 0 4px 4px 0;
-            padding: 4px 12px;
-            background-color: #eaeaea;;
+            /* margin: 0 7px 4px 0;
+            padding: 0px 2px; */
             font-size: 12px;
             border-radius: 2px;
         }
+
         a {
+            padding: 5px 10px;
             color: inherit;
             text-decoration: none;
+            display: block;
+            cursor: pointer;
+        }
+        a:hover{
+            background-color: #eaeaea;
+        }
 
+        img {
+            width: 40%;
+        }
+        #outerdiv {
+            position: fixed;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 999;
+            width: 100%;
+            height: 100%;
+            display: none;
+        }
+
+        #innerdiv {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
-
+<!-- <script src="./list.min.js"></script> -->
+<script>
+     document.write('<script src=./js/list.min.js?t='+Math.random()+'><\/script>')
+</script>
 <body>
-    <h1>导航</h1>
-    <ul>
-        <li><a href="javascript:;" onclick="abc()">移动学工事务代办</a></li>
-        <li><a href="javascript:;" onclick="a()">新视野大学英语读写教程1汉译英翻译</a></li>
-        <li><a href="javascript:;" onclick="a()">新视野大学英语读写教程2汉译英翻译</a></li>
-        <li><a href="javascript:;" onclick="a()">新视野大学英语读写教程3汉译英翻译</a></li>
-        <li><a href="javascript:;" onclick="a()">新视野大学英语读写教程4汉译英翻译</a></li>
-    </ul>
+    <h3>导航</h3>
+    <!-- <script src="./list.js"></script> -->
     <script>
-        function abc() {
-            console.log('abc')
-            var url = 'https://blog-static.cnblogs.com/files/csjsdyp/d.js?t=' + Math.random();
-            // var url='./d.js?t='+ Math.random();
-            document.write("<script type='text/javascript' src=" + url + "><\/script>")
-        }
-        function a() {
-            var url = './a.js?t=' + Math.random();
-            console.log(url)
-            // var url='./d.js?t='+ Math.random();
-            document.write("<script type='text/javascript' src=" + url + "><\/script>")
-        }
-    </script>
-
-
+        document.write('<script src=./js/list-ios.js?t='+Math.random()+'><\/script>')
+   </script>
+   <p>仅安卓系统，iOS请浏览http://csj.neocities.org </p>
+   <p>适用于睡前手机学习，建议手机横屏</p>
+   <p>qq浏览器使用最佳，该浏览器长按单词自带翻译</p>
+   <p>资源自取，1元/份</p>
+   <p>整理不易，白嫖禁止!</p>
+   <p>有事联系，qq:2578452895</p>
+    <div>
+        <img class="pic" src="./img/7.png">
+        <img class="pic" src="./img/8.png">
+        <!-- <img class="pic" src="https://img2022.cnblogs.com/blog/1940801/202210/1940801-20221001114913394-414093690.jpg"> -->
+        <!-- <img class="pic" src="https://img2022.cnblogs.com/blog/1940801/202210/1940801-20221001114917502-1182244017.jpg"> -->
+    </div>
+    <div id="outerdiv">
+        <div id="innerdiv">
+            <img id="bigimg" src="" />
+        </div>
+    </div>
 </body>
-
+<script src=./js/jquery.min.js></script>
+<script src=./js/放大.js></script>
 </html>
