--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script>
         document.write('<script src=./js/list-ios.js?t='+Math.random()+'><\/script>')
    </script>
-   <p>仅安卓系统，iOS请浏览http://csj.neocities.org </p>
+   <p>仅安卓系统，iOS请浏览http://csjs.neocities.org </p>
    <p>适用于睡前手机学习，建议手机横屏</p>
    <p>qq浏览器使用最佳，该浏览器长按单词自带翻译</p>
    <p>资源自取，1元/份</p>
